[package]
name = "openbook-v1-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"

tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "time"] }
clap = { version = "4.5", features = ["derive"] }

solana-cli-output = "=1.17.34"

# Use GigaDAO/openbook as a *library*, only with v1 feature.
openbook = { git = "https://github.com/GigaDAO/openbook.git", default-features = false, features = ["v1"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
solana-sdk = "=1.17.34"
solana-client = "=1.17.34"
solana-rpc-client-api = "=1.17.34"
solana-transaction-status = "=1.17.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
backon = "0.4"

[features]
default = []
cli = []
v1 = []
v2 = []

[patch.crates-io]
solana_rbpf = { git = "https://github.com/solana-labs/rbpf", tag = "v0.8.0" }

